compiler/testData/diagnostics/tests/multiplatform/headerClass/inheritanceByDelegationInExpectClass.kt
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: FIR2IR
// MODULE: m1-common
// FILE: common.kt

interface <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>A<!>

class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>B<!> : A
expect class <!NO_ACTUAL_FOR_EXPECT{JVM}, PACKAGE_OR_CLASSIFIER_REDECLARATION!>Foo<!>(b: B) : <!IMPLEMENTATION_BY_DELEGATION_IN_EXPECT_CLASS, IMPLEMENTATION_BY_DELEGATION_IN_EXPECT_CLASS{JVM}!>A by b<!>

expect class <!NO_ACTUAL_FOR_EXPECT{JVM}, PACKAGE_OR_CLASSIFIER_REDECLARATION!>Bar<!> : <!IMPLEMENTATION_BY_DELEGATION_IN_EXPECT_CLASS, IMPLEMENTATION_BY_DELEGATION_IN_EXPECT_CLASS{JVM}!>A by B()<!>

// MODULE: m1-jvm()()(m1-common)
